<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.upload.UploadActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status_bar_blur_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/result_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacer"
                android:text="@string/upload_to_ainion"
                android:textAppearance="@style/TextAppearance.Material3.DisplaySmall"
                android:textColor="?colorOnSurface"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/material_card_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/spacer"
                android:layout_marginBottom="@dimen/spacer"
                app:cardBackgroundColor="@color/card_background"
                app:cardCornerRadius="@dimen/card_radius"
                app:layout_constraintDimensionRatio="18:9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/result_text_view">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/video_view_material_card_view"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        app:cardBackgroundColor="@color/card_background"
                        app:cardCornerRadius="@dimen/card_radius"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <VideoView
                            android:id="@+id/video_view"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:id="@+id/your_image_is_predicted_as_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacer_half"
                        android:layout_marginTop="@dimen/spacer"
                        android:layout_marginEnd="@dimen/spacer"
                        android:text="@string/i_am_ainion"
                        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
                        app:layout_constraintBottom_toTopOf="@+id/type_text_view"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/video_view_material_card_view"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_chainStyle="packed" />

                    <TextView
                        android:id="@+id/type_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacer_half"
                        android:layout_marginTop="@dimen/spacer_half"
                        android:layout_marginEnd="@dimen/spacer"
                        android:layout_marginBottom="@dimen/spacer"
                        android:text="@string/ainion_description"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/video_view_material_card_view"
                        app:layout_constraintTop_toBottomOf="@+id/your_image_is_predicted_as_text_view" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/i_can_predict_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacer"
                android:text="@string/i_can_predict"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
                android:textColor="@color/material_on_surface_emphasis_high_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/material_card_view" />

            <ImageView
                android:id="@+id/predict_1_image_view"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="@dimen/spacer"
                android:background="@color/card_background"
                android:padding="@dimen/spacer_half"
                android:src="@drawable/ic_trail_sign_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/i_can_predict_text_view" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/spacer_half"
                android:layout_marginEnd="@dimen/spacer"
                android:gravity="center_vertical"
                android:text="@string/traffic_label"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                app:layout_constraintBottom_toBottomOf="@+id/predict_1_image_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/predict_1_image_view"
                app:layout_constraintTop_toTopOf="@+id/predict_1_image_view" />

            <ImageView
                android:id="@+id/predict_2_image_view"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="@dimen/spacer"
                android:background="@color/card_background"
                android:padding="@dimen/spacer_half"
                android:src="@drawable/ic_extension_puzzle_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/predict_1_image_view" />

            <TextView
                android:id="@+id/predict_2_text_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/spacer_half"
                android:layout_marginEnd="@dimen/spacer"
                android:gravity="center_vertical"
                android:text="@string/other_label"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                app:layout_constraintBottom_toBottomOf="@+id/predict_2_image_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/predict_2_image_view"
                app:layout_constraintTop_toTopOf="@+id/predict_2_image_view" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/upload_image_material_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacer"
                android:backgroundTint="?colorOnSurface"
                android:text="@string/upload_image"
                app:icon="@drawable/ic_cloud_upload_24"
                app:iconGravity="textTop"
                app:iconTint="?colorSurface"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/predict_2_text_view"
                app:layout_constraintVertical_bias="1.0"
                app:layout_constraintVertical_chainStyle="packed" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/status_bar_blur_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/navigation_bar_blur_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>